<resources>
    <string name="app_name">Medicines storage</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_medicines">Medicines</string>
    <string name="title_account">Account</string>
    <string name="medicines_extended_fab_label">Add</string>
    <string name="medicines_medicines_title">Medicines</string>
    <string name="medicines_expired_title">Expired</string>
    <string name="medicine_details_residue">Residue in the package</string>
    <string name="medicine_details_open_instruction">Open instruction</string>
    <string name="medicine_details_use_until">Use until</string>
    <string name="medicine_details_store_after_open">Store after open</string>
    <string name="medicine_details_active_ingredient">Active ingredient</string>
    <string name="medicine_details_pharmacological_group">Pharmacological group</string>
    <string name="medicine_details_label">Medicine details</string>
    <string name="medicine_details_cancel">Cancel</string>
    <string name="medicine_details_save">Save</string>
    <string name="menu_search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="medicines_empty_title">Here will be your medicines</string>
    <string name="menu_edit_title">Edit</string>
    <string name="medicines_search_search">Search</string>
    <string name="medicines_search_label">Choose medicine</string>
    <string name="item_medicines_search_medicine_image">Medicine image</string>
    <string name="dialog_medicine_details_edit_residue_naming">Dosage form</string>
    <string name="dialog_medicine_details_edit_residue_volume">Quantity</string>
    <string name="dialog_medicine_details_edit_residue_volume_error">Wrong data format</string>
    <string name="dialog_medicine_details_edit_residue_units">Unit</string>
    <string name="dialog_medicine_details_edit_residue_packages_amount">Packages</string>
    <string name="dialog_medicine_details_edit_residue_residue">Residue</string>
    <string name="dialog_medicine_details_edit_residue_ok" translatable="false">OK</string>
    <string name="dialog_medicine_details_edit_residue_cancel">Cancel</string>
    <string name="dialog_medicine_details_date_picker_title">Select an expiration date</string>
    <string name="menu_delete_title">Delete</string>
    <string name="medicine_details_delete_dialog_message">Are you sure you want to remove the medicine?</string>
    <string name="medicine_details_delete_dialog_title">Warning</string>
    <string name="scanner_label">Scanner</string>
    <string name="medicines_search_empty_title">Nothing is found</string>
    <string name="item_reminder_skip_btn">Skip</string>
    <string name="reminders_reminders_title">Reminders</string>
    <string name="reminders_have_to_take_title">Have to take</string>
    <string name="reminders_empty_title">Here will be your reminders</string>
    <string name="menu_account_title">Account</string>
    <string name="adding_new_search_label">Add new reminder</string>
    <string name="reminder_details_dosage_form">Dosage</string>
    <string name="reminder_details_dose">How many at a time</string>
    <string name="reminder_details_medication_schedule">Medication schedule</string>
    <string name="reminder_details_duration">Reception duration</string>
    <string name="item_take_time_title">%d intake</string>
    <string name="item_take_time_spinner_morning">Morning (8:00)</string>
    <string name="item_take_time_spinner_day">Day (14:00)</string>
    <string name="item_take_time_spinner_night">Night (19:00)</string>
    <string name="item_take_time_spinner_custom">Choose time</string>
    <string name="reminder_details_intakes_amount">How many times a day</string>
    <string name="reminder_details_delete_dialog_message">Are you sure you want to remove the reminder?</string>
    <string name="reminder_details_label">Reminder details</string>
    <string name="reminder_details_medication_duration">Medication duration</string>
    <string name="reminder_details_days">days</string>
    <string-array name="item_take_time_spinner">
        <item>Morning (9:00)</item>
        <item>Day (14:00)</item>
        <item>Night (19:00)</item>
        <item>Choose time</item>
    </string-array>
    <plurals name="reminders_plurals_per_day">
        <item quantity="zero">%1$d times a day</item>
        <item quantity="one">Once a day</item>
        <item quantity="two">2 times a day</item>
        <item quantity="few">%1$d times a day</item>
        <item quantity="many">%1$d times a day</item>
        <item quantity="other">%1$d times a day</item>
    </plurals>
    <plurals name="reminders_plurals_days">
        <item quantity="zero">%1$d days</item>
        <item quantity="one">%1$d day</item>
        <item quantity="two">%1$d days</item>
        <item quantity="few">%1$d days</item>
        <item quantity="many">%1$d days</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="medicine_details_use_until_plurals_days">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d more day)</item>
        <item quantity="two">(%1$d more days)</item>
        <item quantity="few">(%1$d more days)</item>
        <item quantity="many">(%1$d more days)</item>
        <item quantity="other">(%1$d more days)</item>
    </plurals>
    <plurals name="medicine_details_use_until_plurals_months">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d more month)</item>
        <item quantity="two">(%1$d more months)</item>
        <item quantity="few">(%1$d more months)</item>
        <item quantity="many">(%1$d more months)</item>
        <item quantity="other">(%1$d more months)</item>
    </plurals>
    <plurals name="medicine_details_use_until_plurals_years">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d more year)</item>
        <item quantity="two">(%1$d more years)</item>
        <item quantity="few">(%1$d more years)</item>
        <item quantity="many">(%1$d more years)</item>
        <item quantity="other">(%1$d more years)</item>
    </plurals>

    <plurals name="medicine_details_use_until_expired_plurals_days">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d day ago)</item>
        <item quantity="two">(%1$d days ago)</item>
        <item quantity="few">(%1$d days ago)</item>
        <item quantity="many">(%1$d days ago)</item>
        <item quantity="other">(%1$d days ago)</item>
    </plurals>
    <plurals name="medicine_details_use_until_expired_plurals_months">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d month ago)</item>
        <item quantity="two">(%1$d months ago)</item>
        <item quantity="few">(%1$d months ago)</item>
        <item quantity="many">(%1$d months ago)</item>
        <item quantity="other">(%1$d months ago)</item>
    </plurals>
    <plurals name="medicine_details_use_until_expired_plurals_years">
        <item quantity="zero">(expired)</item>
        <item quantity="one">(%1$d year ago)</item>
        <item quantity="two">(%1$d years ago)</item>
        <item quantity="few">(%1$d years ago)</item>
        <item quantity="many">(%1$d years ago)</item>
        <item quantity="other">(%1$d years ago)</item>
    </plurals>

    <plurals name="medicine_details_store_after_open_plurals">
        <item quantity="one">Store %1$d day</item>
        <item quantity="two">Store %1$d days</item>
        <item quantity="few">Store %1$d days</item>
        <item quantity="many">Store %1$d days</item>
        <item quantity="other">Store %1$d days</item>
    </plurals>

    <string-array name="medicines_add_type_array">
        <item>Scan barcode</item>
        <item>Search</item>
    </string-array>
    <string name="notifications_action_intake_complete">Take</string>
    <string name="notifications_action_intake_skip">Skip</string>

    <string name="notifications_title_new_intake">It\'s time to take %1$d %2$s of %3$s.</string>
    <string name="notifications_title_no_medicines">You ran out of %1$s medication.</string>
    <string name="notifications_title_medicine_will_end_soon">The %1$s medicine will run out soon.</string>
    <string name="notifications_body_medicine_will_end_soon">There are %1$d more %2$s left.</string>
    <string name="reminder_details_dosage_help_message">Specify the number of doses of medication you take at a time.</string>
    <string name="reminder_details_field_error">Введите значение</string>
    <string name="account_medicines_amount_overline">Medicines amount</string>
    <string name="account_reminders_amount_overline">Reminders amount</string>
    <string name="account_sign_out_button">Sign out</string>
    <string name="account_sign_in_title">Sign in</string>
    <string name="account_sign_in_body">and store your medicines in the cloud.</string>
    <string name="account_sign_in_button">Sign in</string>
    <string name="account_google_sign_in_error">Google sign in error</string>
    <string name="reminder_details_intakes_amount_help_message">Specify the number of intakes of the medication per day.</string>
    <string name="reminder_details_duration_help_message">Specify how many days you will take the medicine.</string>
    <string name="dialog_medicine_details_edit_residue_title">Edit quantity</string>
    <string name="notifications_action_intake_postpone">Postpone</string>
    <string name="notifications_channel_name">Reminders</string>

    <string-array name="medicines_dosage_forms_array">
        <item>pcs.</item>
        <item>pills</item>
    </string-array>

</resources>