<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="ru.spbstu.gusev.medicinesstorage.ui.reminders.reminderdetails.ReminderDetailsViewModel" />

        <import type="kotlin.jvm.functions.Function0" />

        <import type="com.google.android.material.timepicker.MaterialTimePicker" />

        <import type="ru.spbstu.gusev.medicinesstorage.R" />

        <variable
            name="onChooseTime"
            type="Function0&lt;MaterialTimePicker>" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        tools:context=".ui.reminders.reminderdetails.ReminderDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reminder_details_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            android:elevation="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/reminder_details_cancel_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medicine_details_side_margins"
                android:layout_marginTop="@dimen/medicine_details_side_margins"
                android:layout_marginBottom="@dimen/medicine_details_side_margins"
                android:onClick="@{view -> viewmodel.onCancel()}"
                android:text="@string/medicine_details_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reminder_details_save_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medicine_details_side_margins"
                android:layout_marginEnd="@dimen/medicine_details_side_margins"
                android:layout_marginBottom="@dimen/medicine_details_side_margins"
                android:onClick="@{view -> viewmodel.onSave()}"
                android:text="@string/medicine_details_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/medicine_details_content_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/reminder_details_bottom_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reminder_details_dosage_form_title_tv"
                    style="@style/Overline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.9"
                    android:text="@string/reminder_details_dosage_form"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_details_dose_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    setEndIconClickListener="@{viewmodel.onDoseHelpClicked}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/reminder_details_dose"
                    app:endIconDrawable="@drawable/ic_help_outline_16px"
                    app:endIconMode="custom"
                    app:expandedHintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_dosage_form_title_tv"
                    app:suffixText="@{viewmodel.reminderDetails.dosageForm}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminder_details_dose_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="@={viewmodel.reminderDetails.dose}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/reminder_details_medication_schedule_title_tv"
                    style="@style/Overline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.9"
                    android:text="@string/reminder_details_medication_schedule"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_dose_input" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_details_intakes_amount_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    setEndIconClickListener="@{viewmodel.onIntakesAmountHelpClicked}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/reminder_details_intakes_amount"
                    app:endIconDrawable="@drawable/ic_help_outline_16px"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_medication_schedule_title_tv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminder_details_intakes_amount_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textInt="@={viewmodel.reminderDetails.intakesAmount}" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/reminder_details_intakes"
                    intakes="@={viewmodel.reminderDetails.intakes}"
                    intakesAmount="@{viewmodel.reminderDetails.intakesAmount}"
                    onChooseTime="@{onChooseTime}"
                    onChooseTimeIntakes="@{onChooseTime}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_intakes_amount_input" />

                <TextView
                    android:id="@+id/reminder_details_duration_title_tv"
                    style="@style/Overline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.9"
                    android:text="@string/reminder_details_medication_duration"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_intakes" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_details_duration_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    setEndIconClickListener="@{viewmodel.onDaysDurationHelpClicked}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/reminder_details_duration"
                    app:endIconDrawable="@drawable/ic_help_outline_16px"
                    app:endIconMode="custom"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_details_duration_title_tv"
                    app:suffixText="@string/reminder_details_days">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reminder_details_duration_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="@={viewmodel.reminderDetails.duration}" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>