<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="ru.spbstu.gusev.medicinesstorage.ui.medicines.MedicinesViewModel" />

        <variable
            name="freshMedicinesAdapter"
            type="ru.spbstu.gusev.medicinesstorage.ui.medicines.adapters.MedicinesAdapter" />

        <variable
            name="expiredMedicinesAdapter"
            type="ru.spbstu.gusev.medicinesstorage.ui.medicines.adapters.MedicinesAdapter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.medicines.MedicinesFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.medicines.MedicinesFragment">

                <androidx.constraintlayout.widget.Group
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewmodel.isEmptyFreshMedicinesList() ? View.GONE : View.VISIBLE}"
                    app:constraint_referenced_ids="fresh_medicines_title_tv,fresh_medicines_recycler_view"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/fresh_medicines_title_tv"
                    style="@style/Overline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/medicines_medicines_title"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fresh_medicines_recycler_view"
                    onItemClickListener="@{viewmodel::openMedicine}"
                    setAdapter="@{freshMedicinesAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fresh_medicines_title_tv"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_medicine" />

                <androidx.constraintlayout.widget.Group
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewmodel.isEmptyExpiredMedicinesList() ? View.GONE : View.VISIBLE}"
                    app:constraint_referenced_ids="expired_medicines_title_tv,expired_medicines_recycler_view"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/expired_medicines_title_tv"
                    style="@style/Overline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/medicines_expired_title"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fresh_medicines_recycler_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expired_medicines_recycler_view"
                    onItemClickListener="@{viewmodel::openMedicine}"
                    setAdapter="@{expiredMedicinesAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/expired_medicines_title_tv"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_medicine" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/medicines_extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/medicines_extended_fab_label"
            android:text="@string/medicines_extended_fab_label"
            android:textColor="?attr/colorOnPrimary"
            app:icon="@drawable/ic_plus_24dp"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>